[package]
name = "hp_classic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "*"
boards = { path = "../boards" }
chips = { path = "../chips" }
log = "*"
arbitrary-int = "*"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.66"
wasm-bindgen-futures = "*"

[dependencies.web-sys]
version = "0.3.66"
features = [
  'Window',
  'Document',
  'Element',
  'HtmlCollection',
  'HtmlInputElement',
  'DomTokenList',
]